Fixed horizontal scrolling bug at 1200px width

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -35,7 +35,7 @@ a {
 
 /* Navbar */
 #menu{
-  padding: 15px;
+  padding: 15px 0;
   background-color: rgba(255,255,255,0.6);
 }
 
